--- a/nexmon-app/package.json
+++ b/nexmon-app/package.json
@@ -10,10 +10,11 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-opener": "^2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-opener": "^2"
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.18",
